# S0008E

./: .gitignore
projects/Skeleton/: CMakeLists.txt
projects/Skeleton/code/: Animation.h  Camera.h  Footman.h  Graphics.h  GraphicsNode.h  MathLib.cpp  MathLib.h  Matrix4D.h  Shader.h  Skeleton.h  Vector4D.h  exampleapp.cc  exampleapp.h  light.h  main.cc  meshresource.h  software renderer.h  textureresource.h
projects/Skeleton/code/Shaders/: fs.shader  vs.shader
